--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.so filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.anim filter=lfs diff=lfs merge=lfs -text
